syntax = "proto3";

package user;

message User {
    string id = 1;
    string status = 2;
    string role = 3;
    string login = 4;
    string name = 5;
    bool is_telegram_verified = 6;
    string created_at = 10;
    optional string telegram_id = 11;
}